--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,13 +15,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
-        <ImageButton
+        <Button
+            android:textSize="15sp"
+            android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/dot_2" />
+            android:layout_marginBottom="8dp"
+            android:drawableLeft="@drawable/wechat_logo_small"
+            android:text="@string/wechat_login"
+            android:layout_weight="0.06" />
 
     </LinearLayout>
 
@@ -37,24 +42,27 @@
         android:paddingRight="30dp">
 
         <Button
-            android:textColor="#C50A1D"
+            android:textSize="15sp"
             android:id="@+id/log_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:background="@drawable/shape"
-            android:text="@string/log_in" />
+            android:text="@string/log_in"
+            android:textColor="#C50A1D" />
 
 
         <Button
-            android:textColor="#FFFFFF"
+            android:textSize="15sp"
             android:id="@+id/sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/shape2"
-            android:text="@string/sign_up" />
+            android:text="@string/sign_up"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
@@ -72,6 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical">
+
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager"
