--- a/app/src/main/res/layout/login_item2.xml
+++ b/app/src/main/res/layout/login_item2.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <TextView
+        android:textSize="30sp"
+        android:id="@+id/img2_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:text="@string/img2_title" />
+
+    <TextView
+        android:textSize="20sp"
+        android:textColor="#AEAEAE"
+        android:id="@+id/img2_sum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="20dp"
+        android:text="@string/img2_sum" />
 
     <ImageView
         android:id="@+id/img"
-        android:src="@drawable/login_2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:src="@drawable/login_img2" />
 
 
-</RelativeLayout>
+</LinearLayout>
