--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,9 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@android:style/Theme.Holo.Light.NoActionBar"
     tools:context="com.example.qiang.weishop.LoginActivity">
 
     <LinearLayout
-
-
         android:id="@+id/one"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,19 +16,18 @@
         android:weightSum="1">
 
         <Button
-            android:textSize="15sp"
-            android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_weight="0.06"
+            android:background="#00000000"
             android:drawableLeft="@drawable/wechat_logo_small"
             android:text="@string/wechat_login"
-            android:layout_weight="0.06" />
+            android:textSize="15sp" />
 
     </LinearLayout>
 
     <LinearLayout
-
         android:id="@+id/two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +38,6 @@
         android:paddingRight="30dp">
 
         <Button
-            android:textSize="15sp"
             android:id="@+id/log_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,18 +46,19 @@
             android:layout_weight="1"
             android:background="@drawable/shape"
             android:text="@string/log_in"
-            android:textColor="#C50A1D" />
+            android:textColor="#C50A1D"
+            android:textSize="15sp" />
 
 
         <Button
-            android:textSize="15sp"
             android:id="@+id/sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/shape2"
             android:text="@string/sign_up"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
