--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -80,7 +80,7 @@
                 android:text="@string/phone_number"
                 android:textColor="#000000" />
 
-            <EditText
+            <com.example.qiang.weishop.EdittextWithDel
                 android:id="@+id/phone_sum"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -114,7 +114,7 @@
                 android:text="@string/password"
                 android:textColor="#000000" />
 
-            <EditText
+            <com.example.qiang.weishop.EdittextWithDel
                 android:id="@+id/password_sum"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -122,6 +122,7 @@
                 android:background="@null"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword" />
+
 
         </LinearLayout>
 
@@ -139,6 +140,14 @@
             android:background="@drawable/shape_light"
             android:text="@string/log_in"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginTop="20dp"
+            android:text="@string/forgot"
+            android:layout_gravity="right"
+            android:textSize="14sp"
+            android:textColor="#4384D8"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
