--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -142,6 +142,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/forgot_password"
             android:layout_marginTop="20dp"
             android:text="@string/forgot"
             android:layout_gravity="right"
