--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:background="#00000000"
-                android:text="@string/local_title" />
+                android:text="@string/local_sum" />
 
         </LinearLayout>
 
