--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="country_item_background">#f2f2f2</color>
     <color name="country_item_first_background">#dcdcdc</color>
+    <color name="blue">#3c70e5</color>
 </resources>
