--- a/app/src/main/res/layout/activity_sign_up_next.xml
+++ b/app/src/main/res/layout/activity_sign_up_next.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_login_main"
+    android:id="@+id/activity_sign_up_next"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.qiang.weishop.LoginActivity">
-
+    tools:context="com.example.qiang.weishop.SignUpNextActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -17,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/log_in"
+            android:text="@string/set_password"
             android:textColor="@color/white" />
     </android.support.v7.widget.Toolbar>
 
@@ -35,25 +34,31 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingTop="10dp">
-
             <TextView
-                android:textSize="16sp"
-                android:id="@+id/local_title"
+                android:id="@+id/verification_code"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="1.3"
                 android:paddingRight="10dp"
-                android:text="@string/local_title"
-                android:textColor="#000000" />
+                android:text="@string/verification_code"
+                android:textColor="#000000"
+                android:textSize="16sp" />
 
-            <Button
-                android:gravity="center_vertical"
-                android:id="@+id/local_sum"
+            <com.example.qiang.weishop.EdittextWithDel
+                android:id="@+id/verification_code_sum"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:background="@null"
+                android:hint="@string/six_verification_code"
+                android:inputType="number" />
+            <Button
+                android:id="@+id/reacquire"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#00000000"
-                android:text="@string/local_sum" />
+                android:text="@string/reacquire" />
 
         </LinearLayout>
 
@@ -71,22 +76,22 @@
             android:paddingTop="10dp">
 
             <TextView
-                android:textSize="16sp"
-                android:id="@+id/phone_title"
+                android:id="@+id/set_password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingRight="10dp"
-                android:text="@string/phone_number"
-                android:textColor="#000000" />
+                android:text="@string/set_password"
+                android:textColor="#000000"
+                android:textSize="16sp" />
 
             <com.example.qiang.weishop.EdittextWithDel
-                android:id="@+id/phone_sum"
+                android:id="@+id/set_password_sum"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:background="@null"
-                android:hint="@string/phone_hint"
+                android:hint="@string/set_password_hint"
                 android:inputType="number" />
 
         </LinearLayout>
@@ -97,58 +102,33 @@
             android:layout_height="2dp"
             android:background="#ECECEC" />
 
+        <Button
+            android:id="@+id/sign_up_main_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shape_light"
+            android:text="@string/sign_up"
+            android:textColor="#F6D8DB"
+            android:textSize="16sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
+            android:layout_marginTop="15dp"
+            android:gravity="right|center_vertical"
+            android:orientation="horizontal">
 
             <TextView
-                android:textSize="16sp"
-                android:id="@+id/password_title"
-                android:layout_width="0dp"
+                android:id="@+id/cant_receive_code"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingRight="20dp"
-                android:text="@string/password"
-                android:textColor="#000000" />
-
-            <com.example.qiang.weishop.EdittextWithDel
-                android:id="@+id/password_sum"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@null"
-                android:hint="@string/password_hint"
-                android:inputType="textPassword" />
-
+                android:text="@string/cant_receive_code"
+                android:textColor="@color/blue"
+                android:textSize="10sp" />
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/password_divi"
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:background="#ECECEC" />
-        <Button
-            android:id="@+id/log_in_main"
-            android:textSize="16sp"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#F6D8DB"
-            android:background="@drawable/shape_light"
-            android:text="@string/log_in"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/forgot_password"
-            android:layout_marginTop="20dp"
-            android:text="@string/forgot"
-            android:layout_gravity="right"
-            android:textSize="14sp"
-            android:textColor="#4384D8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
     </LinearLayout>
+
 </RelativeLayout>
