--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.qiang.weishop.LoginActivity">
+    tools:context="com.example.qiang.weishop.WelcomeActivity">
 
     <LinearLayout
         android:id="@+id/one"
