--- a/app/src/main/res/layout/activity_forgot_pwd.xml
+++ b/app/src/main/res/layout/activity_forgot_pwd.xml
@@ -96,7 +96,7 @@
             android:layout_height="2dp"
             android:background="#ECECEC" />
         <Button
-            android:id="@+id/log_in_main"
+            android:id="@+id/forgot_password_next"
             android:textSize="16sp"
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
