--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wood"
+    android:background="@drawable/wood_light_1"
     tools:context="com.example.qiang.weishop.MainActivity">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -26,11 +27,11 @@
                 android:src="@mipmap/main_icon" />
 
             <TextView
+                android:id="@+id/user_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="5"
-                android:text="duzili" />
+                android:layout_weight="5" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -57,13 +58,14 @@
                 android:layout_height="1dip"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:background="#ee80531d"
+                android:background="#eebe9361"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:layout_weight="4"
             android:id="@+id/main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -93,9 +95,9 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_weight="3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_below="@id/main_button"
             android:gravity="center"
             android:orientation="horizontal">
@@ -108,11 +110,11 @@
                 android:src="@drawable/notification_icon" />
 
             <ImageView
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
                 android:id="@+id/main_kaidangonglue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
                 android:background="@drawable/main_item_shape"
                 android:clickable="true"
                 android:src="@mipmap/main_bottom_2" />
@@ -124,5 +126,5 @@
                 android:layout_marginRight="@dimen/main_icon"
                 android:src="@drawable/setting_icon" />
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
