--- a/app/src/main/res/layout/activity_sign_up_next.xml
+++ b/app/src/main/res/layout/activity_sign_up_next.xml
@@ -92,7 +92,7 @@
                 android:layout_weight="3"
                 android:background="@null"
                 android:hint="@string/set_password_hint"
-                android:inputType="number" />
+                android:inputType="textPassword" />
 
         </LinearLayout>
 
