--- a/app/src/main/res/layout/main_item1.xml
+++ b/app/src/main/res/layout/main_item1.xml
@@ -2,121 +2,151 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:orientation="vertical">
-    <LinearLayout
 
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <LinearLayout
-
-            android:layout_width="wrap_content"
+            android:layout_width="1dp"
             android:layout_height="wrap_content"
-            android:padding="15dp">
-
-            <ImageButton
-                android:layout_width="@dimen/main_button_bian"
-                android:layout_height="@dimen/main_button_bian"
-                android:background="@drawable/main_item_shape"
-                android:src="@mipmap/button_1"
-                android:text="123" />
+            android:layout_weight="1">
 
         </LinearLayout>
 
         <LinearLayout
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="15dp">
+            android:layout_weight="6"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:layout_width="@dimen/main_button_bian"
-                android:layout_height="@dimen/main_button_bian"
-                android:background="@drawable/main_item_shape"
-                android:src="@mipmap/button_2"
-                android:text="123" />
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp">
+
+                    <ImageButton
+                        android:layout_width="@dimen/main_button_bian"
+                        android:layout_height="@dimen/main_button_bian"
+                        android:background="@drawable/main_item_shape"
+                        android:src="@mipmap/button_1"
+                        android:text="123" />
+
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp">
+
+                    <ImageButton
+                        android:layout_width="@dimen/main_button_bian"
+                        android:layout_height="@dimen/main_button_bian"
+                        android:background="@drawable/main_item_shape"
+                        android:src="@mipmap/button_2"
+                        android:text="123" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp">
+
+                    <ImageButton
+                        android:layout_width="@dimen/main_button_bian"
+                        android:layout_height="@dimen/main_button_bian"
+                        android:background="@drawable/main_item_shape"
+                        android:src="@mipmap/button_3"
+                        android:text="123" />
+
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp">
+
+                    <ImageButton
+                        android:layout_width="@dimen/main_button_bian"
+                        android:layout_height="@dimen/main_button_bian"
+                        android:background="@drawable/main_item_shape"
+                        android:src="@mipmap/button_4"
+                        android:text="123" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp">
+
+                    <ImageButton
+                        android:layout_width="@dimen/main_button_bian"
+                        android:layout_height="@dimen/main_button_bian"
+                        android:background="@drawable/main_item_shape"
+                        android:src="@mipmap/button_5"
+                        android:text="123" />
+
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp">
+
+                    <ImageButton
+                        android:layout_width="@dimen/main_button_bian"
+                        android:layout_height="@dimen/main_button_bian"
+                        android:background="@drawable/main_item_shape"
+                        android:src="@mipmap/button_6"
+                        android:text="123" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
         </LinearLayout>
     </LinearLayout>
-
-
-    <LinearLayout
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <LinearLayout
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp">
-
-            <ImageButton
-                android:layout_width="@dimen/main_button_bian"
-                android:layout_height="@dimen/main_button_bian"
-                android:background="@drawable/main_item_shape"
-                android:src="@mipmap/button_3"
-                android:text="123" />
-
-        </LinearLayout>
-
-        <LinearLayout
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp">
-
-            <ImageButton
-                android:layout_width="@dimen/main_button_bian"
-                android:layout_height="@dimen/main_button_bian"
-                android:background="@drawable/main_item_shape"
-                android:src="@mipmap/button_4"
-                android:text="123" />
-
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <LinearLayout
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp">
-
-            <ImageButton
-                android:layout_width="@dimen/main_button_bian"
-                android:layout_height="@dimen/main_button_bian"
-                android:background="@drawable/main_item_shape"
-                android:src="@mipmap/button_5"
-                android:text="123" />
-
-        </LinearLayout>
-
-        <LinearLayout
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp">
-
-            <ImageButton
-                android:layout_width="@dimen/main_button_bian"
-                android:layout_height="@dimen/main_button_bian"
-                android:background="@drawable/main_item_shape"
-                android:src="@mipmap/button_6"
-                android:text="123" />
-
-        </LinearLayout>
-    </LinearLayout>
-
 
 </LinearLayout>
