--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
 
         <LinearLayout
             android:id="@+id/top"
+            android:onClick="top_click"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:clickable="true"
